[package]
name = "sxp"
version = "0.1.0"
edition = "2021"
description = "S-eXPressions"
categories = ["encoding", "parser-implementations", "no-std"]

[dependencies]
itoa = "1.0.8"
log = "0.4.19"
ryu = "1.0.14"
serde = { version = "1.0.166", default-features = false }
thiserror = "1.0.40"
indexmap = { version = "2", optional = true }

[dev-dependencies]
serde_derive = "1.0.16"
serde_bytes = "0.11.10"
rustversion = "1.0.13"

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]
# TODO
order = ["indexmap", "std"]
